--- a/templates/option_input.html
+++ b/templates/option_input.html
@@ -1,7 +1,7 @@
 <script src="/static/random.js">
 </script>
-
-<input type="text" id="choice" name="item_to_random" value="">Số lựa chọn: <br>
+<input type="text" id="choice" name="item_to_random" placeholder="Số lựa chọn..." value="">
+<br>
 <button class="btn" type="button" onclick="addFields()" name="add_item_button" >Thêm lựa chọn</button>
 
 <div class="choices_field" id="choices_field">
