--- a/templates/random_page.html
+++ b/templates/random_page.html
@@ -1,1 +1,3 @@
-<!-- <p>Kết quả là </p> -->
+<script src="/static/random.js">
+</script>
+<!-- <button type="button" class="btn btn-center" onclick="get_input()" name="button">Xác nhận</button> -->
